<resources>
    <string name="app_name">Notes</string>
    <string name="delete_all_notes_confirmation">Do you want to delete all notes?</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="delete_notes">Delete notes</string>
    <string name="no">No</string>
    <string name="pinned_notes">Pinned</string>
    <string name="notes">Notes</string>
    <string name="unpin_note">Unpin</string>
    <string name="pin_note">Pin</string>
    <string name="create_note">Create note</string>
    <string name="save_note">Save note</string>
    <string name="edit_note">Edit note</string>
    <string name="generic_error_message">Oops, something went wrong…</string>
    <string name="empty_note_error">Note cannot be empty</string>
    <string name="back">Back</string>
    <string name="type_title_hint">Type title</string>
    <string name="type_text_hint">Type text</string>
</resources>